# garagem-django

./: .pdm-python  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: models.py  serializers.py  views.py
garagem/models/: modelo.py  veiculo.py
garagem/serializers/: veiculo.py
